--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,15 @@
+
+Tue Oct 28 12:55:48 GMT 2003
+
+	- Added code to return list of file written to disk. Needs to be
+	  improved as part of a general stats structure to be used by 
+	  monitoring interface.
+
+	- Added back some code to do file counting to tell when received
+	  full carousel. Still not working fully, need to find a correct
+	  way to do this ( check spec ? ).
+
+
 Sun Sep  7 14:56:05 BST 2003
 
 	- Fixed bug in attaching previously arrived files to newly arrived
