--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ Last Modification Date: 04/02/2013
 
 x.x.x -- xx/xx/xxxx
 - Made all API calls thread-safe (except dsmcc_open / dsmcc_close)
+- Added API methods dsmcc_cache_clear and dsmcc_cache_clear_carousel
 
 2.0.1 -- 31/01/2013
 - Don't queue DDB for module when it's already completely cached
