--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,11 @@
 libdsmcc changelog file.
-Last Modification Date: 04/02/2013
+Last Modification Date: 05/02/2013
 
-x.x.x -- xx/xx/xxxx
+x.x.x -- 05/02/2013
 - Made all API calls thread-safe (except dsmcc_open / dsmcc_close)
 - Added API methods dsmcc_cache_clear and dsmcc_cache_clear_carousel
+- Change API calls dsmcc_(add|remove)_carousel to dsmcc_(queue|dequeue)_carousel
+- Fix queueing the same carousel multiple times
 
 2.0.1 -- 31/01/2013
 - Don't queue DDB for module when it's already completely cached
