--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 libdsmcc changelog file.
-Last Modification Date: 15/02/2013
+Last Modification Date: 20/02/2013
+
+3.0.3 -- 20/02/2013
+- Enhance error checking for state loading/saving, fixes compilation
+with _FORTIFY_SOURCE
 
 3.0.2 -- 15/02/2013
 - Fixed loading of state file.
