--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 libdsmcc changelog file.
 Last Modification Date: 20/02/2013
 
+3.1.0 -- 23/05/2013
+- Add datacarousel support
+
 3.0.3 -- 20/02/2013
 - Enhance error checking for state loading/saving, fixes compilation
 with _FORTIFY_SOURCE
