--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 libdsmcc changelog file.
-Last Modification Date: 20/02/2013
+Last Modification Date: 14/11/2013
+
+3.1.2 -- 14/11/2013
+- Ugly Fix in case assoc_tag isn't unique 
 
 3.1.0 -- 23/05/2013
 - Do not load cache state file when 'keep_cache' option is disabled.
