--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 libdsmcc changelog file.
-Last Modification Date: 14/11/2013
+Last Modification Date: 30/01/2014
+
+3.1.3 -- 30/01/2014
+- Fix user/group rights value on files copies.
 
 3.1.2 -- 14/11/2013
 - Ugly Fix in case assoc_tag isn't unique 
