--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 libdsmcc changelog file.
 Last Modification Date: 30/01/2014
 
+3.1.5 -- 06/02/2014
+- Use clockgettime with CLOCK_MONOTONIC instead of gettimeofday
+
 3.1.4 -- 07/11/2014
 - Do not initialize transaction_id to a value that could be used
 
