--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 libdsmcc changelog file.
 Last Modification Date: 30/01/2014
 
+3.1.7 -- 19/05/2017
+- Get transaction_id from DSI
+
 3.1.6 -- 21/03/2017
 - for BIOP SRG and DIR messages, broaden test on binding kind
   to match 'dir' and 'fil' with any character in uppercase
@@ -51,3 +54,4 @@ with _FORTIFY_SOURCE
 0.6 -- 19/02/2004
 - Initial version by Richard Palmer <richard@tiro.org.uk>
 - Imported from http://libdsmcc.sourceforge.net/
+
