--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,13 @@
 libdsmcc changelog file.
 Last Modification Date: 30/01/2014
 
+9999 -- 16/08/2017
+- adding support of parameters tid, section_control_table_id and section_data_table_id
+to handle 'user private' table ID values in DSMCC sections for DSI/DII/DDB
+- adding constants for the default values of the 3 parameters listed above
+- adding support of skip_leading_bytes parameter to be able to skip a certain amount of bytes
+before the payload in DSMCC sections
+
 3.1.8 -- 24/05/2017
 - if parameter enabled, ignore private_indicator bit in section header (default: disabled)
 
@@ -21,7 +28,7 @@ Last Modification Date: 30/01/2014
 - Fix user/group rights value on files copies.
 
 3.1.2 -- 14/11/2013
-- Ugly Fix in case assoc_tag isn't unique 
+- Ugly Fix in case assoc_tag isn't unique
 
 3.1.0 -- 23/05/2013
 - Do not load cache state file when 'keep_cache' option is disabled.
