--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 libdsmcc changelog file.
 Last Modification Date: 30/01/2014
 
+9999 -- 25/09/2017
+- add support for bindings in BIOP SRG which contains a sub-directory in their file name
+
 4.0.1 -- 21/08/2017
 - adding support of parameters tid, section_control_table_id and section_data_table_id
 to handle 'user private' table ID values in DSMCC sections for DSI/DII/DDB
