--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 libdsmcc changelog file.
 Last Modification Date: 30/01/2014
 
+9999 -- 01/02/2018
+- Fix rights during directory creation 
+
 5.0.3 -- 25/01/2018
 - Add option tmp-overwriting
 
